--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <div><li><a class="wkwk" href="">BERANDA</a></li></div>
+                    <div><li><a class="wkwk" href="">home</a></li></div>
                     <div><li><a class="wkwk" href="">BLOG</a></li></div>
                     <div><li><a class="wkwk" href="">INSTAGRAM</a></li></div>
                     <div><li class="Pesat"><a href="https://wa.me/6282276676181?text=Saya%20Berminat%20ke%20SMK%20Pesat%20ITXPro%20..." data-size="small" class="putih">Hubungi Kami</a></li></div>
